public/css/base.css
/*
// 888     888                               
// 888     888                               
// 888     888                               
// Y88b   d88P   8888b.   888d888  .d8888b   
//  Y88b d88P       "88b  888P"    88K       
//   Y88o88P    .d888888  888      "Y8888b.  
//    Y888P     888  888  888           X88  
//     Y8P      "Y888888  888       88888P'  
*/
:root {
    --bg-color: #ffffff;
    --higlight-color: #01b0d3;
    --neutral-color: #242332;

    --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
        sans-serif;
    --font-bold: 500;

    --z-base: 1;
    --z-on-top: calc(var(--z-base) + 1);
}

/*  .d8888b.                                                    888  
// d88P  Y88b                                                   888  
// 888    888                                                   888  
// 888          .d88b.   88888b.    .d88b.   888d888   8888b.   888  
// 888  88888  d8P  Y8b  888 "88b  d8P  Y8b  888P"        "88b  888  
// 888    888  88888888  888  888  88888888  888      .d888888  888  
// Y88b  d88P  Y8b.      888  888  Y8b.      888      888  888  888  
//  "Y8888P88   "Y8888   888  888   "Y8888   888      "Y888888  888  
*/
/******* Change Box Model ***************/
*,
*:before,
*:after {
    box-sizing: border-box;
}

body {
    padding: 0;
    margin: 0;
    background-image: url("/images/site/checkerboard.jpg");
    font-family: var(--font-family);
}

#wrapper {
    background: var(--bg-color);
    padding: 1rem;
}

/* 888    888                           888                     
// 888    888                           888                     
// 888    888                           888                     
// 8888888888   .d88b.    8888b.    .d88888   .d88b.   888d888  
// 888    888  d8P  Y8b      "88b  d88" 888  d8P  Y8b  888P"    
// 888    888  88888888  .d888888  888  888  88888888  888      
// 888    888  Y8b.      888  888  Y88b 888  Y8b.      888      
// 888    888   "Y8888   "Y888888   "Y88888   "Y8888   888      
*/
#top-header {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;
}

#top-header .siteName a,
#top-header #tools a {
    color: var(--neutral-color);
    text-decoration: none;
}

#top-header .siteName {
    font-size: 3rem;
}

#top-header #tools {
    font-size: 1.5rem;
}

/* 888b    888                      
// 8888b   888                      
// 88888b  888                      
// 888Y88b 888   8888b.   888  888  
// 888 Y88b888      "88b  888  888  
// 888  Y88888  .d888888  Y88  88P  
// 888   Y8888  888  888   Y8bd8P   
// 888    Y888  "Y888888    Y88P    
*/
nav {
    margin-top: 1rem;
    display: flex;

    justify-content: space-evenly;
    align-items: center;

    background-color: var(--neutral-color);
}

nav a {
    padding: 0.5rem;
    color: white;
    text-decoration: none;
}

/* 888    888                                     
// 888    888                                     
// 888    888                                     
// 8888888888   .d88b.   88888b.d88b.    .d88b.   
// 888    888  d88""88b  888 "888 "88b  d8P  Y8b  
// 888    888  888  888  888  888  888  88888888  
// 888    888  Y88..88P  888  888  888  Y8b.      
// 888    888   "Y88P"   888  888  888   "Y8888   
*/
/* ------------------------------- Home Hero ------------------------------- */
.home-hero {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.home-hero h1 {
    grid-column: 1/4;
}

.home-hero .vehicle-info {
    z-index: var(--z-on-top);

    padding: 1rem;

    grid-column: 1/3;
    grid-row: 2/3;

    background-color: rgba(255, 255, 255, 0.7);
    color: var(--higlight-color);

    font-weight: 600;
}

.home-hero .vehicle-info * {
    margin: 0;
}

.home-hero .vehicle-info :not(:first-child) {
    font-size: 1.3rem;
}

.home-hero .vehicle-info a {
    display: inline-block;
    margin-top: 1rem;
    padding: 1rem;

    background-color: var(--higlight-color);
    color: var(--neutral-color);

    text-decoration: none;
}

.home-hero .vehicle-img {
    margin-left: auto;
    margin-right: auto;

    grid-column: 1/4;
    grid-row: 2/3;
}

.home-hero .vehicle-img img {
    max-width: 100%;
}

/* ------------------------------- Home Upgrades and Reviews ------------------------------- */

.home-content {
    display: flex;
    flex-direction: column-reverse;

    gap: 1rem;
}

.vehicle-upgrades,
.vehicle-reviews {
    flex-grow: 1;
}

.vehicle-upgrades {
    display: grid;
    grid-template-columns: repeat(2, 1fr);

    gap: 0.5rem;
}

.vehicle-upgrades h2 {
    grid-column: 1/3;
}

.vehicle-upgrades > div {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.vehicle-upgrades div:has(> img) {
    height: 100%;
    padding: 0.5rem;
    text-align: center;

    background-color: var(--higlight-color);
    border: 1px solid var(--neutral-color);
}

.vehicle-upgrades > div a {
    text-align: center;
}

.vehicle-reviews ul {
    font-size: 1.2em;
}

.vehicle-reviews ul li:not(:last-child) {
    margin-bottom: 0.5rem;
}

/* 8888888888                      888                        
// 888                             888                        
// 888                             888                        
// 8888888      .d88b.    .d88b.   888888   .d88b.   888d888  
// 888         d88""88b  d88""88b  888     d8P  Y8b  888P"    
// 888         888  888  888  888  888     88888888  888      
// 888         Y88..88P  Y88..88P  Y88b.   Y8b.      888      
// 888          "Y88P"    "Y88P"    "Y888   "Y8888   888      
*/
footer {
    padding-top: 1rem;
}

